[ASTERIXDB-3631][RT] Profile nested groupby clauses
Details:
- Extend subplan profiling to cover nested plans in groupby
- Fix stale read between stat add and serialize in StatsCollector

Ext-ref: MB-67666

Change-Id: I516dc90b8da3a7086dc80b67946ac14f6ade0973
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/20270
Integration-Tests: Ian Maxon <imaxon@apache.org>
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>
Tested-by: Ali Alsuliman <ali.al.solaiman@gmail.com>